load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "clusterregistry-image",
    base = "@ubuntu//image",
    cmd = ["./clusterregistry"],
    files = [":clusterregistry"],
)

container_push(
    name = "push-clusterregistry-image",
    image = ":clusterregistry-image",
    registry = "gcr.io",
    repository = "$(project)/clusterregistry",
    tag = "dev",
    format = "Docker",
)
